--- a/registration_login/pom.xml
+++ b/registration_login/pom.xml
@@ -26,6 +26,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.16</version>
+</dependency>
+    <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
     <version>3.8.1</version>
